# project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
etc/data/: auto2.csv  auto93.csv  data_fixer.ipynb  healthCloseIsses12mths0001-hard.csv  healthCloseIsses12mths0011-easy-2.csv  healthCloseIsses12mths0011-easy.csv  nasa93dem.csv
src/: cluster.py  clustering.py  col.py  cols.py  config.py  contrast_sets.py  data.py  discretization.py  lists.py  main.py  num.py  optimization.py  playground.ipynb  pre_process.py  project_data.py  query.py  range.py  rows.py  rule.py  sym.py  update.py  utils.py  xpln.lua
tests/: test_bins.py  test_cliffs.py  test_clone.py  test_csv.py  test_data.py  test_dist.py  test_half.py  test_main.py  test_nums.py  test_rand.py  test_scotknott.py  test_some.py  test_stats.py  test_sway.py  test_syms.py  test_table.py  test_the.py  test_top.py  test_tree.py  test_xpln.py
