[tool.poetry]
name = "ASE Project"
version = "0.1.0"
description = ""
authors = ["Parth Thosani <pthosan@ncsu.edu>", "Ritwik Tiwari <rtiwari2@ncsu.edu>", "Urvashi Kar <ukar@ncsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^6.1.3"
tqdm = '^4.64.1'
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.0"
mypy = "^1.1.1"
pytest-cov = '^4.0.0'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
