[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ritwik Tiwari <ritwiktiwari24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
sphinx = "^6.1.3"
pre-commit = "^3.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
